public/stylesheets/mobile.css
/*
  Place all the styles related to the matching controller here.
  They will automatically be included in application.css.
*/
#mobile-index img#logo {
  margin: 2em auto 2em auto;
  display: block;
}
#mobile-map{ 
  width: 100%; 
  height: 250px;
  margin: 1em auto 1em auto;
  border: 2px solid gray;
}

#mobile-directions {
  display: none;
}

ul#locations-list img.twitter-icon {
  top: 0.6em;
}

ul#locations-list li.recent_tweet_true {
  background: yellow;
}

ul#events-list p.event-desc {
  font-weight: bold;
  font-style: italic;
  font-size: 1.1em;
}

ul#events-list span.event-date {
  font-weight: bold;
}

#directions-and-phone-buttons {
  font-size: 0.9em;
}

div#event-and-deal-links {
  margin-bottom: 2em;
}

p.tweeted-at {
  float: right;
  font-style: italic;
}

div.mobile-twitter-mention .mentioner {
  font-weight: bold;
}

div.mobile-twitter-mention p.tweet-text {
  white-space: normal;
  font-weight: normal;
  margin-left: 0em;
}

div.mobile-twitter-mention img {
  width: 78px;
  margin-left: -1px;
}

.center-wrapper{
  text-align: center;
}
.center-wrapper * {
  margin: 0 auto;
}

